# origami

./: .gitignore  .gitmodules  CMakeLists.txt
include/origami/: log.hpp  origami.hpp
include/origami/components/: fullscreenquad.hpp  program.hpp  sprite.hpp  transform.hpp
include/origami/engine/: init.hpp
include/origami/events/: appEvent.hpp  engineEvent.hpp  event.hpp  firer.hpp  keyCodes.hpp  keyEvent.hpp  mouseEvent.hpp  windowEvent.hpp
include/origami/graphics/: renderer.hpp  texturesampler.hpp  vertex.hpp  window.hpp
include/origami/input/: axis.hpp  keyCodes.hpp
include/origami/resources/: colour.hpp  dynTexture.hpp  shader.hpp  ssbo.hpp  subTexture.hpp  superTexture.hpp  texture.hpp  textureInterface.hpp  ubo.hpp
src/: log.cpp  main.cpp
src/components/: fullscreenquad.cpp  program.cpp  sprite.cpp  transform.cpp
src/engine/: init.cpp
src/events/: appEvent.cpp  engineEvent.cpp  event.cpp  firer.cpp  keyEvent.cpp  mouseEvent.cpp  windowEvent.cpp
src/graphics/: renderer.cpp  texturesampler.cpp  vertex.cpp  window.cpp
src/include/: config.hpp
src/input/: axis.cpp
src/resources/: dynTexture.cpp  shader.cpp  subTexture.cpp  superTexture.cpp  texture.cpp
